# UnmaskedCXX

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LOGO_NOTES.txt  Logging.cpp  Logging.h  Main.cpp  MapOperations.cpp  MapOperations.h  Optional.h  ParsingLogging.cpp  ParsingLogging.h  README.md  Report.csv  RunCMake.sh  RunCMakeDebug.sh  SetOperations.cpp  SetOperations.h  StringOperations.cpp  StringOperations.h  TODO  VectorOperations.cpp  VectorOperations.h  WritingLogging.cpp  WritingLogging.h  cmake_install.cmake  compile_commands.json  cppcheckSuppressions.txt
.cache/clangd/index/: Logging.cpp.EBC95AF8F35B3ABC.idx  Logging.h.99D0DE861F6D9480.idx  Optional.h.7B6C2B1A171AE53F.idx  StringOperations.cpp.ADD3AD05FBAFBA5F.idx  StringOperations.h.1DAB6A01E6D6B909.idx
Docs/: Formal Language Specification.md  Project Goals.md  TODO.md  Validator.md
Docs/.obsidian/: workspace.json
Docs/Parser Architecture/: Glossary.md
Docs/Test Specifications/: General Test Notes.md  Test Types.md  `UnmaskedPredicateTest`.md
ErrorReporter/: ErrorReporter.h
Generators/: AllGenerators.h  FloatGenerator.h  GeneratorParameterStore.cpp  GeneratorParameterStore.h  IntGenerator.h
Graphics/: LOGO_NOTES.txt
PythonReportVisualiser/: main.py
SampleCXXProject/: Calculations.h  VectorCalculations.h
SampleCXXProject/Generators/: Generator_int_2.h
SemanticValidation/: SemanticValidator.cpp  SemanticValidator.h  SemanticallyValidated.h
Templates/: AlwaysReturnValueTestTemplate.cpp  AlwaysReturnValueTestTemplate.cpp_template  StabilisingSetTestTemplate.cpp  StabilisingSetTestTemplate.cpp_template  TestRunnerTemplate.cpp  TestRunnerTemplate.cpp_template  TestSkeleton.cpp_template
TestAuthors/: ArgumentType.h  CreateAlwaysReturnValueTest.cpp  CreateAlwaysReturnValueTest.h  CreateStabilisingSetTest.cpp  CreateStabilisingSetTest.h  FixedArgument.h  NameTestPair.h  RunAllTests.cpp  ScanForAllTests.cpp  TestResult.h  TestSpecification.h
TestCreator/: CreateAlwaysReturnValueTest.cpp  CreateStabilisingSetTest.cpp  CreateStabilisingSetTest.h  FixedArgument.h  ScanForAllTests.cpp  TestCreator.cpp  TestCreator.h  TestDefaults.h  TestMarkers.h
TestCreator/Acceptors/: AcceptIndexAsString.cpp  AcceptIndexValuePair.cpp  AcceptIndexValuePair.h  AcceptSpecificString.cpp  AcceptSpecificString.h
TestCreator/Consts/: TestDefaults.h  TestMarkers.h
TestCreator/Docs/: ParserDelineation.txt
TestCreator/Driver/: Driver.cpp  Driver.h
TestCreator/ErrorWriter/: ErrorWriter.cpp  ErrorWriter.h
TestCreator/MicroParsers/: AcceptGeneratorSettings.cpp  AcceptGeneratorSettings.h  AcceptLambda.cpp  AcceptLambda.h  AcceptSTDFunction.cpp  AcceptSTDFunction.h  AcceptType.cpp  AcceptType.h  AcceptUnmaskedPredicateTest.cpp  AcceptUnmaskedPredicateTest.h  AcceptUnmaskedStabilisingSetTest.cpp  BracketAcceptor.cpp
TestCreator/Parsers/: CreateAdditionalIncludeLine.cpp  CreateAlwaysReturnValueTest.cpp  CreateAlwaysReturnValueTest.h  CreateStabilisingSetTest.cpp  CreateStabilisingSetTest.h
TestCreator/Parsing/: AdvancedLoggingWithBrackets.cpp  AdvancedLoggingWithBrackets.h  PerformSubTask.h
TestCreator/Parsing/Acceptors/: AcceptAnyToken.cpp  AcceptAnyToken.h  AcceptIndexAsString.cpp  AcceptIndexAsString.h  AcceptIndexValuePair.cpp  AcceptIndexValuePair.h  AcceptSpecificString.cpp  AcceptSpecificString.h
TestCreator/Parsing/MicroParsers/: AcceptCastToType.cpp  AcceptCastToType.h  AcceptGeneratorSettings.cpp  AcceptGeneratorSettings.h  AcceptIdentifierValuePair.cpp  AcceptIdentifierValuePair.h  AcceptLambda.cpp  AcceptLambda.h  AcceptSTDFunction.cpp  AcceptSTDFunction.h  AcceptType.cpp  AcceptType.h  AcceptUnmaskedAlwaysReturnValueTest.cpp  AcceptUnmaskedAlwaysReturnValueTest.h  AcceptUnmaskedIncludeFile.cpp  AcceptUnmaskedIncludeFile.h  AcceptUnmaskedPredicateTest.cpp  AcceptUnmaskedPredicateTest.h  AcceptUnmaskedSetParameter.cpp  AcceptUnmaskedSetParameter.h  AcceptUnmaskedStabilisingSetTest.cpp  AcceptUnmaskedStabilisingSetTest.h  BracketAcceptor.cpp  BracketAcceptor.h
TestCreator/Parsing/Parsers/: CreateAdditionalIncludeLine.h  CreateAlwaysReturnValueTest.cpp  CreateAlwaysReturnValueTest.h  CreateStabilisingSetTest.cpp  CreateStabilisingSetTest.h
TestCreator/SemanticValidation/: SemanticValidator.h  SemanticallyValidated.h
TestCreator/Structs/: ArgumentIndex.h  ArgumentType.h  ArgumentValue.h  Filepath.cpp  Filepath.h  FixedArgument.h  GeneralSettingDescriptor.h  GeneratorParameterStoreSeed.cpp  GeneratorParameterStoreSeed.h  GeneratorSettingBunch.cpp  GeneratorSettingBunch.h  GeneratorSettingDescriptor.h  LegalIdentifier.h  ParsedFunction.h  ParsedResult.h  ParsedUnmaskedPredicateTest.h  RichToken.h  Task.h  TestCreationContext.h  TestCreationStatus.cpp  TestCreationStatus.h  TestResult.h  TestSpecification.h  TokenArray.cpp  TokenArray.h
TestCreator/Writing/: ReplaceSymbolAndLog.h  Templates.h
TestCreator/Writing/FragmentWriters/: WriteForLoop.cpp  WriteForLoop.h
TestCreator/Writing/TestWriters/: WriteUnmaskedPredicateTest.cpp  WriteUnmaskedPredicateTest.h
TestIncludes/: AdvancedLogging.cpp  AdvancedLogging.h  BoolToString.h
UnmaskedCreatedTests/: .gitignore  SampleCXXProject_Calculations0.cpp  SampleCXXProject_Calculations1.cpp  SampleCXXProject_Calculations2.cpp
UnmaskedCreatedTestsBak/: RunTests  SampleCXXProject_Calculations0.cpp  SampleCXXProject_Calculations1.cpp  SampleCXXProject_Calculations2.cpp  SampleCXXProject_Calculations3.cpp  TestRunner.cpp
UserlandIncludes/: UnmaskedTests.h
